elasticsearch/kibana/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  ports:
  - port: 8084
    targetPort: 5601
  selector:
    app: kibana
  type: ClusterIP
